Fixed the issue in sidebar when alignment of buttons used to get dissordered

--- a/utilities/style/containers/activitybar/activity.scss
+++ b/utilities/style/containers/activitybar/activity.scss
@@ -4,6 +4,10 @@
 
     &>div:first-child {
         grid-template-rows: 1.5fr 10fr;
+        transition: 2s ease-in all;
+        &>div:first-child{
+            grid-template-columns: 2fr 7fr 2fr;
+        }
         &>div:nth-child(2){
             transition: .3s ease;
             &>ul>li{
